Update Amazon Web Scrapper Project.ipynb

--- a/Amazon Web Scrapper Project.ipynb
+++ b/Amazon Web Scrapper Project.ipynb
@@ -13,6 +13,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import library\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import smtplib\n",
@@ -22,17 +24,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "amazon\n"
+     ]
+    }
+   ],
+   "source": [
+    "#website = amazon\n",
+    "web = \"amazon\"\n",
+    "print(web)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
