finish scrap title and price

--- a/Amazon Web Scrapper Project.ipynb
+++ b/Amazon Web Scrapper Project.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -32,45 +32,9 @@
      "output_type": "stream",
      "text": [
       "\n",
+      "\n",
       "                   Funny Got Data MIS Data Systems Business Analyst T-Shirt\n",
       "                  \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "                   Price:\n",
-      "                  \n",
-      "\n",
-      "\n",
-      "\n",
-      "                     $16.99\n",
-      "                    \n",
-      "\n",
-      "                     $16.99\n",
-      "                    \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
       "\n"
      ]
     }
@@ -89,13 +53,50 @@
     "\n",
     "soup2 = BeautifulSoup(soup1.prettify(), \"html.parser\")\n",
     "\n",
-    "title = soup2.find(id='productTitle').get_text()\n",
-    "\n",
-    "price = soup2.find(id='corePrice_desktop').get_text()\n",
+    "title = soup2.find(id='title').get_text()\n",
     "\n",
     "# print(soup2)\n",
     "print(title)\n",
-    "print(price)\n"
+    "# print(price)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$16.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = soup2.select('.a-offscreen')[0].get_text()\n",
+    "print(price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Funny Got Data MIS Data Systems Business Analyst T-Shirt\n",
+      "$16.99\n"
+     ]
+    }
+   ],
+   "source": [
+    "price = price.strip()\n",
+    "title = title.strip()\n",
+    "print(title)\n",
+    "print(price)"
    ]
   },
   {
