Update Amazon Web Scrapper Project.ipynb

--- a/Amazon Web Scrapper Project.ipynb
+++ b/Amazon Web Scrapper Project.ipynb
@@ -13,8 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import library\n",
-    "\n",
     "from bs4 import BeautifulSoup\n",
     "import requests\n",
     "import smtplib\n",
@@ -23,8 +21,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Connect to website"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "URL = 'https://www.amazon.com/Funny-Data-Systems-Business-Analyst/dp/B07FNW9FGJ/ref=sr_1_1?keywords=funny+got+data+mis+data+systems+business+analyst+t-shirt&qid=1642597284&sprefix=Business+Analyst+T-sh%2Caps%2C335&sr=8-1'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### User agent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36\", \"Accept-Encoding\":\"gzip, deflate\", \"Accept\":\"text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\", \"DNT\":\"1\",\"Connection\":\"close\", \"Upgrade-Insecure-Requests\":\"1\"}\n",
+    "\n",
+    "page = requests.get(URL, headers=headers)\n",
+    "\n",
+    "soup1 = BeautifulSoup(page.content, \"html.parser\")\n",
+    "\n",
+    "soup2 = BeautifulSoup(soup1.prettify(), \"html.parser\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -35,52 +71,30 @@
       "\n",
       "                   Funny Got Data MIS Data Systems Business Analyst T-Shirt\n",
       "                  \n",
-      "\n"
+      "\n",
+      "\n",
+      "                     $16.99\n",
+      "                    \n"
      ]
     }
    ],
    "source": [
-    "# connect to website\n",
-    "\n",
-    "URL = 'https://www.amazon.com/Funny-Data-Systems-Business-Analyst/dp/B07FNW9FGJ/ref=sr_1_1?keywords=funny+got+data+mis+data+systems+business+analyst+t-shirt&qid=1642597284&sprefix=Business+Analyst+T-sh%2Caps%2C335&sr=8-1'\n",
-    "\n",
-    "#user agent\n",
-    "headers = {\"User-Agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36\", \"Accept-Encoding\":\"gzip, deflate\", \"Accept\":\"text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8\", \"DNT\":\"1\",\"Connection\":\"close\", \"Upgrade-Insecure-Requests\":\"1\"}\n",
-    "\n",
-    "page = requests.get(URL, headers=headers)\n",
-    "\n",
-    "soup1 = BeautifulSoup(page.content, \"html.parser\")\n",
-    "\n",
-    "soup2 = BeautifulSoup(soup1.prettify(), \"html.parser\")\n",
-    "\n",
     "title = soup2.find(id='title').get_text()\n",
-    "\n",
-    "# print(soup2)\n",
-    "print(title)\n",
-    "# print(price)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "$16.99\n"
-     ]
-    }
-   ],
-   "source": [
     "price = soup2.select('.a-offscreen')[0].get_text()\n",
+    "print(title)\n",
     "print(price)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Cleaning the data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
